add session、连接器、日志、加载器、容器、lifecycle增加注释